...
        loginButton.setTitle("Войти", for: .normal)
        loginButton.setTitleColor(.black, for: .normal)
        loginButton.titleLabel?.font = UIFont(name: "SFPro-Bold", size: 17)
        loginButton.backgroundColor = .white
        loginButton.layer.cornerRadius = 16
        loginButton.translatesAutoresizingMaskIntoConstraints = false
        loginButton.accessibilityIdentifier = "Authenticate"
        view.addSubview(loginButton)
        
        // Создание UIImageView для логотипа
        let logoImageView = UIImageView(image: UIImage(named: "Logo_of_Unsplash"))
        logoImageView.translatesAutoresizingMaskIntoConstraints = false //можно в logoImageView задавать свои размеры и констрейты
        view.addSubview(logoImageView) //добавление во view объект logoImageView
...
