...
    }
    
    private var estimatedProgressObservation: NSKeyValueObservation?
    
    private let webView: WKWebView = { //создание константы webView
        let webView = WKWebView() //присваивание экземпляру класса WKWebView константу webView
        webView.accessibilityIdentifier = "UnsplashWebView"
        return webView //возвращение константы webView
    }()
    
    //Создание кнопки "Назад"
    private let backButton: UIButton = { //создание константы кнопки с типом UIButton
        let button = UIButton()
...
